--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@ body{
     grid-gap: 1em;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
     grid-template-columns: repeat(var(--grid-cols), 1fr);
+    padding: 10px;
+    border: 2px;
+    border-color: blue;
+    border-style: solid;
+    border-radius: 10px;
   }
 
 .grid-item {
